--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.27.2",
     "core-js": "^3.8.3",
     "element-ui": "^2.15.9",
+    "nprogress": "^0.2.0",
     "sass": "^1.53.0",
     "sass-loader": "^13.0.2",
     "vue": "^2.6.14",
